# nuclei

./: .gitignore  Cargo.toml  README.md  test
.github/: FUNDING.yml
.github/workflows/: ci.yml
data/: quark-gluon-plasma
docs/: .firebaserc  _coverpage.md  benches.md  index.html  introduction.md  quickstart.md  sidebar.md
docs/assets/benchres/epoll_http_bench/1/new/: raw.csv
docs/assets/benchres/epoll_http_bench/1/report/: index.html
docs/assets/benchres/epoll_http_bench/10/new/: raw.csv
docs/assets/benchres/epoll_http_bench/10/report/: index.html
docs/assets/benchres/epoll_http_bench/25/base/: raw.csv
docs/assets/benchres/epoll_http_bench/25/report/: index.html
docs/assets/benchres/io_uring_http_bench/1/new/: raw.csv
docs/assets/benchres/io_uring_http_bench/1/report/: index.html
docs/assets/benchres/io_uring_http_bench/10/new/: raw.csv
docs/assets/benchres/io_uring_http_bench/10/report/: index.html
docs/assets/benchres/io_uring_http_bench/25/base/: raw.csv
docs/assets/benchres/io_uring_http_bench/25/report/: index.html
docs/assets/benchres/io_uring_http_bench/report/: index.html
docs/assets/benchres/io_uring_multishot_http_bench/1/base/: raw.csv
docs/assets/benchres/io_uring_multishot_http_bench/1/report/: index.html
docs/assets/benchres/io_uring_multishot_http_bench/10/new/: raw.csv
docs/assets/benchres/io_uring_multishot_http_bench/10/report/: index.html
docs/assets/benchres/io_uring_multishot_http_bench/25/base/: raw.csv
docs/assets/benchres/io_uring_multishot_http_bench/25/report/: index.html
examples/: Cargo.toml  README.md  fread-vect.rs  fread.rs  fwrite-vect.rs  fwrite.rs  h1-server-multishot.rs  h1-server.rs  proactor-config-fwrite.rs  tcp-client.rs  tcp-server.rs  unix-signal.rs
examples/benches/: http-server-bench.rs
src/: async_io.rs  completion_handler.rs  config.rs  handle.rs  handle_result.rs  lib.rs  proactor.rs  runtime.rs  submission_handler.rs  sys.rs
src/file/: mod.rs
src/filebuf/: buf.rs  mod.rs
src/proactor/: mod.rs  proactor.rs
src/proactor/syscore/: mod.rs
src/proactor/syscore/bsd/: mod.rs
src/syscore/: mod.rs
src/syscore/bsd/: fs.rs  kqueue.rs  mod.rs  nethandle.rs  processor.rs
src/syscore/linux/: mod.rs
src/syscore/linux/epoll/: epoll.rs  mod.rs  nethandle.rs  processor.rs
src/syscore/linux/iouring/: iouring.rs  mod.rs  nethandle.rs  processor.rs
src/syscore/linux/iouring/fs/: buffer.rs  cancellation.rs  mod.rs  store_file.rs
src/syscore/linux/iouring/net/: mod.rs  multishot.rs
src/syscore/windows/: iocp.rs  mod.rs  nethandle.rs
src/syscore/windows/iocp/: iocp.rs  mod.rs  processor.rs
src/waker/: mod.rs
testdata/: dark-matter-vect  quark-gluon-plasma
tests/: fread-vect.rs  fread.rs  fwrite-vect.rs  fwrite.rs
