[package]
name = "nuclei"
version = "0.1.2-alpha.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"
description = "Proactive IO & runtime system"
keywords = ["io", "async", "uring", "iouring", "proactor"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/vertexclique/nuclei"
repository = "https://github.com/vertexclique/nuclei"
documentation = "https://docs.rs/nuclei"
license = "Apache-2.0/MIT"
readme = "README.md"
exclude = [
    "data/*",
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]
autoexamples = false


[features]
default = ["bastion", "epoll"]
# Devs should enable these features to use iouring on linux.
#default = ["bastion", "iouring"]
epoll = []
iouring = ["iou", "uring-sys"]

bastion = ["agnostik/runtime_bastion"]
tokio = ["agnostik/runtime_tokio"]
asyncstd = ["agnostik/runtime_asyncstd"]
smol = ["agnostik/runtime_smol"]

[dependencies]
lever = "0.1.1-alpha.8"
futures = "0.3.5"
futures-io = "0.3.5"
pin-project = "0.4.22"
futures-util = "0.3.5"
socket2 = { version = "0.3.12", features = ["pair", "unix"] }
libc = "0.2"
pin-utils = "0.1.0"
once_cell = "1.4.0"
agnostik = "0.1.4"

# Other backends
[target.'cfg(target_os = "linux")'.dependencies]
iou = { version = "0.0.0-ringbahn.1", optional = true }
uring-sys = { version = "0.6.1", optional = true }


[workspace]
members = [
  ".",
  "examples",
]
