[package]
name = "nuclei"
version = "0.1.4-alpha.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"
description = "Proactive IO & runtime system"
keywords = ["io", "async", "uring", "iouring", "proactor"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/vertexclique/nuclei"
repository = "https://github.com/vertexclique/nuclei"
documentation = "https://docs.rs/nuclei"
license = "Apache-2.0/MIT"
readme = "README.md"
exclude = [
    "data/*",
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]
autoexamples = false


[features]
default = ["async-exec", "epoll"]
# Devs should enable these features to use iouring on linux.
#default = ["asyncstd", "iouring"]
epoll = []
iouring = ["iou", "uring-sys"]

async-exec = ["async-global-executor"]
tokio03 = ["async-global-executor/tokio03"]
tokio02 = ["async-global-executor/tokio02"]
tokio = ["async-global-executor/tokio"]

[dependencies]
lever = "0.1"
futures = "0.3.5"
futures-io = "0.3.5"
futures-util = "0.3.5"
socket2 = { version = "0.3.12", features = ["pair", "unix"] }
libc = "0.2"
pin-utils = "0.1.0"
once_cell = "1.4.0"
async-global-executor = { version = "2.0", optional = true, features = ["async-io"] }

# Other backends
[target.'cfg(target_os = "linux")'.dependencies]
iou = { version = "0.0.0-ringbahn.1", optional = true }
uring-sys = { version = "0.6.1", optional = true }


[workspace]
members = [
  ".",
  "examples",
]
