[package]
name = "nuclei-examples"
version = "0.0.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"
publish = false

[dev-dependencies]
#nuclei = { path = "../" }
nuclei = { path = "../", default-features = false, features = ["async-exec", "iouring"]}
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-util = "0.3"
anyhow = "1.0.31"
async-h1 = "2.0.2"
async-dup = "1.1.0"
http-types = "2.2.1"
num_cpus = "1.13.0"
signal-hook = "0.1.13"


[[example]]
name = "fread"
path = "fread.rs"

[[example]]
name = "fread-vect"
path = "fread-vect.rs"

[[example]]
name = "fwrite"
path = "fwrite.rs"

[[example]]
name = "fwrite-vect"
path = "fwrite-vect.rs"

[[example]]
name = "h1-server"
path = "h1-server.rs"

[[example]]
name = "tcp-server"
path = "tcp-server.rs"

[[example]]
name = "tcp-client"
path = "tcp-client.rs"

[[example]]
name = "unix-signal"
path = "unix-signal.rs"